fix: changed position of card-clicked element and added bodyOverflow function

--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ main {
 
 .card-clicked {
     background-color: #112030e8;
-    position: absolute;
+    position: fixed;
     display: none;
     top: .625rem;
     right: .625rem;
